--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,17 @@
-integration-test-and-security:
+name: CI/CD Pipeline with Security & Testing
+
+on:
+  push:
+    branches:
+      - main
+
+env:
+  ECR_REPOSITORY: asterra-geo-app
+  LAMBDA_FUNCTION_NAME: dev-geo-processor
+
+jobs:
+  # --- שלב 1: בדיקות אבטחה ואינטגרציה (לפני הענן) ---
+  integration-test-and-security:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -7,7 +20,7 @@ integration-test-and-security:
       - name: Build Docker Image locally
         run: docker build -t local-test:latest ./app
 
-      # סריקת אבטחה (כבר עובד לך)
+      # סריקת אבטחה
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
@@ -32,31 +45,63 @@ integration-test-and-security:
           kubectl wait --for=condition=Ready pod/postgres --timeout=60s
 
           # 2. מרימים את האפליקציה שלנו עם restartPolicy=Never
-          # זה התיקון החשוב! מונע את השגיאה כשהסקריפט מסיים לרוץ
+          # זה מונע את השגיאה כשהסקריפט מסיים לרוץ
           kubectl run app-test --image=local-test:latest --image-pull-policy=Never --restart=Never \
             --env="DB_HOST=postgres" \
             --env="DB_USER=postgres" \
             --env="DB_PASS=test" \
             --env="DB_NAME=testdb"
 
-          # 3. מחכים שהפוד יסיים בהצלחה (Completed)
-          # אנחנו נותנים לו 30 שניות לסיים את הריצה הקצרה שלו
+          # 3. מחכים שהפוד יסיים (במקום ירוץ לנצח)
           echo "Waiting for pod to complete..."
           kubectl wait --for=condition=Ready pod/app-test --timeout=30s || true 
           
           # 4. בדיקת תוצאות
-          # אנחנו בודקים שהסטטוס הוא 'Completed' או 'Running' ושאין שגיאות
           sleep 5
-          kubectl get pods
-          
           POD_STATUS=$(kubectl get pod app-test -o jsonpath="{.status.phase}")
           echo "Pod Status: $POD_STATUS"
 
           if [[ "$POD_STATUS" == "Succeeded" || "$POD_STATUS" == "Running" ]]; then
-            echo "✅ Smoke Test Passed: App started and finished successfully."
+            echo "✅ Smoke Test Passed"
             exit 0
           else
-            echo "❌ Smoke Test Failed: Pod status is $POD_STATUS"
+            echo "❌ Smoke Test Failed"
             kubectl logs app-test
             exit 1
           fi
+
+  # --- שלב 2: פריסה לענן (רץ רק אם שלב 1 עבר) ---
+  deploy-to-aws:
+    needs: integration-test-and-security
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
+    - name: Build, tag, and push image to Amazon ECR
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        IMAGE_TAG: ${{ github.sha }}
+      run: |
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./app
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:latest ./app
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+
+    - name: Update Lambda Code
+      run: |
+        aws lambda update-function-code \
+          --function-name ${{ env.LAMBDA_FUNCTION_NAME }} \
+          --image-uri ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
