--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,9 +1,9 @@
 FROM public.ecr.aws/lambda/python:3.11
 
-# --- עדכון אבטחה גורף ---
-# במקום לתקן חבילה ספציפית, אנחנו מעדכנים את כל מערכת ההפעלה
-# זה יתקן את libpng, glib2 וכל פרצת אבטחה עתידית שתתגלה בלינוקס הזה
-RUN yum update -y
+# --- 1. התיקון לשגיאת הבנייה (GCC) ---
+# אנחנו מתקינים כלי פיתוח (gcc, c++) כדי ש-numpy ו-geopandas יוכלו להתקין את עצמם
+RUN yum update -y && \
+    yum install -y gcc gcc-c++ python3-devel
 
 # העתקת קובץ הדרישות והתקנת ספריות פייתון
 COPY requirements.txt ${LAMBDA_TASK_ROOT}
@@ -12,5 +12,7 @@ RUN pip install -r requirements.txt
 # העתקת הקוד שלנו
 COPY main.py ${LAMBDA_TASK_ROOT}
 
-# הגדרת הפקודה שתרוץ
-CMD [ "main.lambda_handler" ]
+# --- 2. התיקון עבור קוברנטיס ו-Flask ---
+# שינינו את זה מ-CMD שמפעיל handler ל-ENTRYPOINT שמריץ את פייתון ישירות.
+# זה יגרום לשרת (app.run) לרוץ מיד כשהפוד עולה ולהאזין לפורט 5000.
+ENTRYPOINT [ "python", "main.py" ]
